# Path-Following-Robot

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/custom_interfaces/share/custom_interfaces/: local_setup.sh  package.sh
install/executor_pkg/share/executor_pkg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_description/lib/robot_description/: display_odom  display_scan  robot_motion_sim  test_laser_publisher
install/robot_description/share/robot_description/: package.sh
log/: latest_build  latest_list
src/custom_interfaces/: CMakeLists.txt  package.xml
src/executor_pkg/: CMakeLists.txt
src/executor_pkg/src/: executor_example2.cpp
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/robot_description/: setup.py
src/robot_description/launch/: empty_world.launch.py  rviz2.launch.py  spawn.launch.py  spawn_two_robots.launch.py
src/robot_description/robot_description/: lidar_distance.py  odom_readings.py  robot_motion_sim.py
src/robot_description/rviz/: config.rviz
src/robot_description/urdf/: robot.gazebo  robot.urdf  robot.xacro
src/robot_description/worlds/: custom_world.sdf  demo_world.sdf
src/simple_obstacle_avoidance/: CMakeLists.txt
src/simple_obstacle_avoidance/launch/: obstacle_avoidance.launch.py
src/simple_obstacle_avoidance/src/: obstacle_avoidance.cpp
src/topic_pkg/: CMakeLists.txt
src/topic_pkg/launch/: move_robot.launch.py  sub_odom.launch.py
src/topic_pkg/src/: move_robot.cpp  sub_odom.cpp
(+44 files in other folders)
